--- a/download.html
+++ b/download.html
@@ -8,6 +8,197 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   </head>
 <body>
+
+  <style type="text/css">
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+*{
+  margin: 0;
+  padding: 0;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+@font-face {
+  font-family: 'planet_kosmosregular';
+  src: url('plank___-webfont.woff2') format('woff2'),
+       url('plank___-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+body{
+  background: rgb(233, 233, 233);
+}
+.container{
+  display: flex;
+  width: 1200px;
+  margin: auto;
+}
+nav{
+  position: absolute;
+  top: 0;
+  left: -20px;
+  bottom: 0;
+  width: 280px;
+  height: 100vh;
+  background: #fff;
+}
+.navbar{
+  width: 80%;
+  margin: 0 auto;
+}
+
+.logo{
+  margin: 2rem 0 1rem 0;
+  padding-bottom: 3rem;
+  display: flex;
+  align-items: center;
+}
+.logo img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.logo h1{
+  font-size: 40px;
+  margin: 10px 0 30px;
+  line-height: 80px;
+  color: darkred;
+  font-family: 'planet_kosmosregular', Arial, sans-serif;
+  margin-left: 1rem;
+}
+
+ul{
+  margin: 0 auto;
+}
+li{
+  padding-bottom: 2rem;
+}
+li a{
+  font-size: 16px;
+  color: rgb(85, 83, 83);
+}
+
+nav i{
+  width: 50px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.logout{
+  position: absolute;
+  bottom: 20px;
+}
+
+.content{
+    position:relative;
+    left:550px;
+    top:200px;
+    max-width: 600px;
+    text-align: center;
+
+}
+
+.btn{
+  color: black;
+  border: 3px solid black;
+  font-size: 1.2em;
+  font-weight: bold;
+  max-width: 150px;
+  text-decoration: none;
+  position: relative;
+  left:220px;
+  top:50px;
+}
+
+@media only screen and (max-width:415px){
+  nav {
+        position: absolute;
+        top: 0;
+        left: -20px;
+        bottom: 0;
+        width: 100px;
+        height: 100vh;
+        background: #fff;
+      }
+
+      .logo h1{
+    font-size: 15px;
+     margin: 10px 0 30px;
+  line-height: 80px;
+  color: darkred;
+  font-family: 'planet_kosmosregular', Arial, sans-serif;
+  margin-left: 1rem;
+  
+}
+
+.nav-item{
+    display: none;
+}
+
+nav i{
+  width: 100px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.content{
+    position:relative;
+    left:150px;
+    top:200px;
+    max-width: 200px;
+    text-align: center;
+    font-size: 10px;
+
+}
+
+.btn{
+  color: black;
+  border: 3px solid black;
+  font-size: 1.2em;
+  font-weight: bold;
+  max-width: 150px;
+  text-decoration: none;
+  position: relative;
+  left:20px;
+  top:50px;
+}
+
+}
+
+@media only screen and (max-width:770px) and (min-width:760px){
+  nav{
+  position: absolute;
+  top: 0;
+  left: -20px;
+  bottom: 0;
+  width: 280px;
+  height: 150vh;
+  background: #fff;
+}
+
+.content{
+    position:relative;
+    left:300px;
+    top:400px;
+    max-width: 600px;
+    text-align: center;
+    padding-right: 20px;
+
+}
+
+}
+
+
+
+
+  </style>
+
+
     <section id="main" >
         <div class='content'>
             <h2>Download</h2>
