Linking files to normalise.css

--- a/beginner.html
+++ b/beginner.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
     <title>Beginner - drive</title>
     <meta
       name="viewport"
@@ -280,7 +281,7 @@ nav i{
               </li>
               <li><a href="download.html">
                 <i class="fas fa-download"></i>
-                <span class="nav-item">Downlaod</span>
+                <span class="nav-item">Download</span>
               </a>
             </li>
               <li><a href="logout.php" class="logout">
