--- a/download.html
+++ b/download.html
@@ -6,6 +6,7 @@
     <title> Download - drive </title>
     <link rel="stylesheet" href="download.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
   </head>
 <body>
 
